# FastAPIShopProject

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  deploy.sh  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirement.txt  run.py  seed_data.py
backend/alembic/: env.py
backend/alembic/versions/: 05f463ebe89e_initial_schema.py  60ef7ab0ea28_add_stock_and_orders.py  61f352d97d5d_initial_schema.py  72b40cd3b903_add_stationery_fields.py
backend/app/: config.py  database.py  limiter.py  main.py  security.py
backend/app/models/: category.py  order.py  product.py
backend/app/repositories/: category_repository.py  order_repository.py  product_repository.py
backend/app/routes/: __init__.py  auth.py  cart.py  categories.py  orders.py  products.py  uploads.py
backend/app/schemas/: auth.py  cart.py  category.py  order.py  product.py
backend/app/services/: cart_service.py  category_service.py  order_service.py  product_service.py
backend/tests/: conftest.py  test_admin.py  test_app.py  test_features.py  test_orders.py
backups/: .gitignore
docs/superpowers/plans/: 2026-06-24-empire-visual-redesign.md  2026-06-29-stationery-rebrand.md
docs/superpowers/specs/: 2026-06-24-empire-visual-redesign-design.md  2026-06-29-stationery-rebrand-design.md
frontend/: .dockerignore  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: admin.spec.js  cart.spec.js  storefront.spec.js
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: AppFooter.vue  AppHeader.spec.js  AppHeader.vue  (+10 more)
scripts/: backup.sh  restore.sh
(+20 files in other folders)
