[project]
name = "fastapi-shop"
version = "0.1.0"
description = "FastAPI Shop backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.4",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.45",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = ["error::DeprecationWarning"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
