[project]
name = "fastapi-shop"
version = "0.1.0"
description = "FastAPI Shop backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.2",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.45",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "psycopg[binary]>=3.2",
    "alembic>=1.18.4",
    "pyjwt>=2.13.0",
    "bcrypt>=5.0.0",
    "slowapi>=0.1.10",
    "python-multipart>=0.0.32",
    "email-validator>=2.3.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Long product description literals are data, not code.
"seed_data.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = false
exclude = ["alembic/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = ["error::DeprecationWarning"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]
